src/scss/_settings.scss
html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
  padding: 0;
  margin: 0;
}

body {
  margin: 0;
  min-width: 320px;
  overflow-x: hidden;
  font-family: PTSansNarrow, sans-serif;
  text-transform: uppercase;
  font-size: 14px;
  line-height: 24px;
}

.main-page {
  background-color: $black-color;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}

ul, li {
  margin: 0;
  padding: 0;
  list-style: none;
}

a {
  color: inherit;
  display: inline-block;
  text-decoration: none;
}

img {
  max-width: 100%;
}

.container {
  max-width: 970px;
  padding: 0 15px;
  margin: 0 auto;
}

.btn-reset {
  cursor: pointer;
  background-color: transparent;
  border: none;
  font-family: inherit;
  color: inherit;
  text-transform: inherit;
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba($black-color, .6);
  z-index: 99;
  opacity: 0;
  visibility: hidden;
  transition: opacity .3s;

  &.active {
    visibility: visible;
    opacity: 1;
  }
}

.lock {
  overflow: hidden;
}

.map {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  opacity: 0;
  visibility: hidden;
  transition: opacity .3s;

  &.active {
    opacity: 1;
    visibility: visible;
  }
}

.map-iframe {
  width: 80%;
  height: 80%;
  margin: auto;
}

